--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Slideshow</title>
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <!--Font Awesome CDN-->
     <link
